Sur la branche main  Votre branche est à jour avec 'origin/main'.
 Modifications qui seront validées :
	supprimé :        LBFGSpp-master/test.py
	modifié :         ProjectAtlasFiles/AtlasBundles.cxx
	modifié :         ProjectAtlasFiles/AtlasBundles.h
	supprimé :        ProjectAtlasFiles/BMDDistance.cxx
	supprimé :        ProjectAtlasFiles/BMDDistance.h
	supprimé :        ProjectAtlasFiles/BundlesDataFormat.cxx
	supprimé :        ProjectAtlasFiles/BundlesDataFormat.h
	supprimé :        ProjectAtlasFiles/BundlesFormat.cxx
	supprimé :        ProjectAtlasFiles/BundlesFormat.h
	modifié :         ProjectAtlasFiles/CMakeLists.txt
	modifié :         ProjectAtlasFiles/RecognizedBundles.cxx
	modifié :         ProjectAtlasFiles/RecognizedBundles.h
	supprimé :        ProjectAtlasFiles/TrkFormat.cxx
	supprimé :        ProjectAtlasFiles/TrkFormat.h
	modifié :         src/CMakeLists.txt
	modifié :         src/ConvertBundleFormat.cxx
	modifié :         src/ConvertBundleFormat.h
	modifié :         src/ProjectAtlas.cxx
	modifié :         src/ProjectAtlas.h
	modifié :         src/ProjectAtlasGeoLab.cxx
	modifié :         src/ProjectAtlasGeoLab.h
	modifié :         src/alignFibers.cxx
	modifié :         src/alignFibers.h
	modifié :         src/alignFibersInBundle.cxx
	modifié :         src/alignFibersInBundle.h
	modifié :         src/alignFibersInBundleToPlaneXY.cxx
	modifié :         src/alignFibersInBundleToPlaneXY.h
	modifié :         src/analyseAtlasBundle.cxx
	modifié :         src/analyseAtlasBundle.h
	modifié :         src/applyPredictedLabels.cxx
	modifié :         src/applyPredictedLabels.h
	modifié :         src/applyTransformBundle.cxx
	modifié :         src/applyTransformBundle.h
	supprimé :        src/computeCentroids.cxx
	supprimé :        src/computeCentroids.h
	modifié :         src/computeNeighborhood.cxx
	modifié :         src/computeNeighborhood.h
	supprimé :        src/getFileForPlotsMiguel.cxx
	supprimé :        src/getFileForPlotsMiguel.h
	modifié :         src/pr

--- a/ProjectAtlasFiles/CMakeLists.txt
+++ b/ProjectAtlasFiles/CMakeLists.txt
@@ -1,13 +1,11 @@
-add_library(BundlesFormat BundlesFormat.cxx BundlesFormat.h)
-add_library(BundlesDataFormat BundlesDataFormat.cxx BundlesDataFormat.h)
-add_library(TrkFormat TrkFormat.cxx TrkFormat.h)
+add_library(ioWrapper ioWrapper.cxx ioWrapper.h)
+add_library(NiftiImage niftiImage.cxx niftiImage.h)
+add_library(BundlesMinf bundlesMinf.cxx bundlesMinf.h)
+add_library(BundlesData bundlesData.cxx bundlesData.h)
 add_library(AtlasBundles AtlasBundles.cxx AtlasBundles.h)
 add_library(RecognizedBundles RecognizedBundles.cxx RecognizedBundles.h)
-add_library(BMDDistance BMDDistance.cxx BMDDistance.h)
 
 
-target_link_libraries(BundlesDataFormat Eigen3::Eigen lbfgspp)
-target_link_libraries(TrkFormat BundlesFormat BundlesDataFormat)
-target_link_libraries(AtlasBundles TrkFormat stdc++fs)
+target_link_libraries(BundlesData BundlesMinf NiftiImage Eigen3::Eigen lbfgspp)
+target_link_libraries(AtlasBundles BundlesData stdc++fs)
 target_link_libraries(RecognizedBundles AtlasBundles)
-target_link_libraries(BMDDistance RecognizedBundles)
