--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -17,3 +17,7 @@ foreach(f ${LIB_SOURCE})
             DESTINATION bin)
 endforeach(f)
 configure_file(analyseAtlasBundle.py ${CMAKE_BINARY_DIR}/bin/analyseAtlasBundle.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(dipyServer.py  ${CMAKE_BINARY_DIR}/bin/dipyServer.py  COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(clientRegisterBundles.py ${CMAKE_BINARY_DIR}/bin/clientRegisterBundles.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(clientComputeCentroids.py ${CMAKE_BINARY_DIR}/bin/clientComputeCentroids.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(clientCloseServer.py ${CMAKE_BINARY_DIR}/bin/clientCloseServer.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
