--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 /volatile/Atlases/Nicole/HCP/EsbaBundles.zip filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.tck filter=lfs diff=lfs merge=lfs -text
+*.bundles filter=lfs diff=lfs merge=lfs -text
+*.trk filter=lfs diff=lfs merge=lfs -text
+*.bundlesdata filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
