--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -22,3 +22,4 @@ configure_file(clientRegisterBundles.py ${CMAKE_BINARY_DIR}/bin/clientRegisterBu
 configure_file(clientComputeCentroids.py ${CMAKE_BINARY_DIR}/bin/clientComputeCentroids.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(clientCloseServer.py ${CMAKE_BINARY_DIR}/bin/clientCloseServer.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(scoresPredictedSGT.py ${CMAKE_BINARY_DIR}/bin/scoresPredictedSGT.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(applySupWMA.py ${CMAKE_BINARY_DIR}/bin/applySupWMA.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
