--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -24,3 +24,4 @@ configure_file(clientCloseServer.py ${CMAKE_BINARY_DIR}/bin/clientCloseServer.py
 configure_file(scoresPredictedSGT.py ${CMAKE_BINARY_DIR}/bin/scoresPredictedSGT.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(applySupWMA.py ${CMAKE_BINARY_DIR}/bin/applySupWMA.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(piecewiseLinearRegressionDtiMeasures.py ${CMAKE_BINARY_DIR}/bin/piecewiseLinearRegressionDtiMeasures.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(extract_bundles_feat.py ${CMAKE_BINARY_DIR}/bin/extract_bundles_feat.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
