--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -27,3 +27,4 @@ configure_file(piecewiseLinearRegressionDtiMeasures.py ${CMAKE_BINARY_DIR}/bin/p
 configure_file(extract_bundles_feat.py ${CMAKE_BINARY_DIR}/bin/extract_bundles_feat.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(recoBundlesLabelsToGeoLab.py ${CMAKE_BINARY_DIR}/bin/recoBundlesLabelsToGeoLab.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
 configure_file(statisticsComparisonWithAtlas.py ${CMAKE_BINARY_DIR}/bin/statisticsComparisonWithAtlas.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
+configure_file(countFoundBundles.py ${CMAKE_BINARY_DIR}/bin/countFoundBundles.py COPYONLY FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
