--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 configure_file(ProjectAtlasConfig.h.in ProjectAtlasConfig.h)
 
 # Set PYTHON_BINARY
-set(PYTHON_BINARY "/usr/bin/python3")
+set(PYTHON_BINARY "/usr/bin/env python3")
 
 
 
@@ -41,17 +41,10 @@ if (OPENMP_FOUND)
 endif()
 
 
-#################################### Configure files ####################################
-file(GLOB APPS_DIR apps/*)
-foreach(f ${APPS_DIR})
-    get_filename_component(sourceName ${f} NAME)
-    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/apps/${sourceName} ${CMAKE_CURRENT_SOURCE_DIR}/apps-config/${sourceName} FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ )
-endforeach(f)
-
 ######################################## LBFGSpp ########################################
 add_subdirectory(LBFGSpp-master)
 
 ################################# Adding subdirectories #################################
 add_subdirectory(src)
-add_subdirectory(apps-config)
+add_subdirectory(apps)
 add_subdirectory(doc)
